quick fix for the overflow issue in chat component

--- a/src/components/Chat/_chat.scss
+++ b/src/components/Chat/_chat.scss
@@ -1,5 +1,5 @@
 #chat {
-  min-height: 62vh;
+  height: 62vh;
   padding: 1em 0em;
   display: flex;
   flex-direction: column;
